chore: configure eslint and prettier

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
-        "format": "prettier --write resources/",
-        "format:check": "prettier --check resources/",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
         "lint": "eslint",
         "lint:fix": "eslint --fix",
         "typecheck": "tsc --noEmit"
@@ -54,8 +54,8 @@
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
         "prettier": "^3.4.2",
-        "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript-eslint": "^8.23.0"
     },
