--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
-        "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "lint": "eslint",
+        "format:fix": "prettier --write .",
+        "lint:check": "eslint",
         "lint:fix": "eslint --fix",
         "typecheck": "tsc --noEmit"
     },
