--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "format:fix": "prettier --write .",
         "lint:check": "eslint",
         "lint:fix": "eslint --fix",
+        "prepare": "husky || true",
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
@@ -55,6 +56,8 @@
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-simple-import-sort": "^12.1.1",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.5",
         "prettier": "^3.4.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript-eslint": "^8.23.0"
